[gd_scene load_steps=14 format=3 uid="uid://bjg8pnc0tn7y8"]

[ext_resource type="Script" path="res://SoHyeongBeen/control.gd" id="1_c0c0o"]
[ext_resource type="Texture2D" uid="uid://imj4thtp7nwt" path="res://SoHyeongBeen/ui pack/1 Frames/Interface windows.png" id="1_mltig"]
[ext_resource type="FontFile" uid="uid://c6kce6fci7l3n" path="res://SoHyeongBeen/ui pack/10 Font/CyberpunkCraftpixPixel.otf" id="2_1p5kl"]
[ext_resource type="Texture2D" uid="uid://cgkh0dnnlt08b" path="res://SoHyeongBeen/ui pack/1 Frames/FrameMap.png" id="2_dmcu1"]
[ext_resource type="Texture2D" uid="uid://cd1en03cq6nej" path="res://SoHyeongBeen/ui pack/6 Buttons/10/10_01.png" id="2_gyk42"]
[ext_resource type="Texture2D" uid="uid://duwsaco3xewiy" path="res://SoHyeongBeen/ui pack/6 Buttons/10/10_02.png" id="3_6p4wc"]
[ext_resource type="Texture2D" uid="uid://dwwgmw50ktvap" path="res://SoHyeongBeen/ui pack/6 Buttons/10/10_03.png" id="4_qqd3g"]
[ext_resource type="Texture2D" uid="uid://cm7f23te0r7jo" path="res://SoHyeongBeen/ui pack/6 Buttons/10/10_05.png" id="5_3up5n"]
[ext_resource type="Texture2D" uid="uid://biy5842hc4yim" path="res://SoHyeongBeen/ui pack/6 Buttons/10/10_06.png" id="6_uy53y"]
[ext_resource type="Texture2D" uid="uid://csap21qbr7x27" path="res://SoHyeongBeen/ui pack/6 Buttons/10/10_07.png" id="7_dxfc2"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_hitcj"]
texture = ExtResource("2_dmcu1")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
16:0/0 = 0
17:0/0 = 0
0:1/0 = 0
5:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
16:1/0 = 0
17:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
16:2/0 = 0
17:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
16:3/0 = 0
17:3/0 = 0
0:4/0 = 0
5:4/0 = 0
7:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
16:4/0 = 0
17:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
16:5/0 = 0
17:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
11:6/0 = 0
12:6/0 = 0
14:6/0 = 0
15:6/0 = 0
16:6/0 = 0
17:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
7:7/0 = 0
8:7/0 = 0
14:7/0 = 0
15:7/0 = 0
16:7/0 = 0
17:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
12:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0
16:8/0 = 0
17:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
12:9/0 = 0
13:9/0 = 0
14:9/0 = 0
15:9/0 = 0
16:9/0 = 0
17:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
10:10/0 = 0
11:10/0 = 0
12:10/0 = 0
13:10/0 = 0
14:10/0 = 0
15:10/0 = 0
16:10/0 = 0
17:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
7:11/0 = 0
8:11/0 = 0
9:11/0 = 0
10:11/0 = 0
11:11/0 = 0
12:11/0 = 0
13:11/0 = 0
14:11/0 = 0
15:11/0 = 0
16:11/0 = 0
17:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
6:12/0 = 0
7:12/0 = 0
8:12/0 = 0
9:12/0 = 0
10:12/0 = 0
11:12/0 = 0
12:12/0 = 0
13:12/0 = 0
14:12/0 = 0
15:12/0 = 0
16:12/0 = 0
17:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
6:13/0 = 0
7:13/0 = 0
8:13/0 = 0
9:13/0 = 0
10:13/0 = 0
11:13/0 = 0
12:13/0 = 0
13:13/0 = 0
14:13/0 = 0
15:13/0 = 0
16:13/0 = 0
17:13/0 = 0
0:14/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
5:14/0 = 0
6:14/0 = 0
7:14/0 = 0
8:14/0 = 0
9:14/0 = 0
10:14/0 = 0
11:14/0 = 0
12:14/0 = 0
13:14/0 = 0
14:14/0 = 0
15:14/0 = 0
16:14/0 = 0
17:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0
4:15/0 = 0
5:15/0 = 0
6:15/0 = 0
7:15/0 = 0
8:15/0 = 0
9:15/0 = 0
10:15/0 = 0
11:15/0 = 0
12:15/0 = 0
13:15/0 = 0
14:15/0 = 0
15:15/0 = 0
16:15/0 = 0
17:15/0 = 0
0:16/0 = 0
1:16/0 = 0
2:16/0 = 0
3:16/0 = 0
4:16/0 = 0
5:16/0 = 0
6:16/0 = 0
7:16/0 = 0
8:16/0 = 0
9:16/0 = 0
10:16/0 = 0
11:16/0 = 0
12:16/0 = 0
13:16/0 = 0
14:16/0 = 0
15:16/0 = 0
16:16/0 = 0
17:16/0 = 0
0:17/0 = 0
1:17/0 = 0
2:17/0 = 0
3:17/0 = 0
4:17/0 = 0
5:17/0 = 0
6:17/0 = 0
7:17/0 = 0
8:17/0 = 0
9:17/0 = 0
10:17/0 = 0
11:17/0 = 0
12:17/0 = 0
13:17/0 = 0
14:17/0 = 0
15:17/0 = 0
16:17/0 = 0
17:17/0 = 0
1:1/0 = 0
2:1/0 = 0
6:4/0 = 0
8:4/0 = 0
7:3/0 = 0
7:2/0 = 0
6:1/0 = 0
4:1/0 = 0
3:1/0 = 0
4:4/0 = 0
6:6/0 = 0
8:6/0 = 0
7:6/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
6:5/0 = 0
6:7/0 = 0

[sub_resource type="TileSet" id="TileSet_2esnc"]
tile_size = Vector2i(32, 32)
sources/0 = SubResource("TileSetAtlasSource_hitcj")

[sub_resource type="AtlasTexture" id="AtlasTexture_0p7y7"]
atlas = ExtResource("1_mltig")
region = Rect2(223, 734, 199, 271)

[node name="Full UI" type="CanvasLayer"]

[node name="BoxContainer" type="BoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="ButtonSystem" type="Control" parent="BoxContainer"]
layout_mode = 2
script = ExtResource("1_c0c0o")
text_value = "Resume"
button_text_x_scale = 96.0
button_text_y_scale = 32.0

[node name="TileMapLayer" type="TileMapLayer" parent="BoxContainer/ButtonSystem"]
texture_filter = 5
tile_set = SubResource("TileSet_2esnc")

[node name="frame" type="Sprite2D" parent="BoxContainer/ButtonSystem"]
position = Vector2(-576, -324)
texture = SubResource("AtlasTexture_0p7y7")

[node name="activeSprite" type="Node2D" parent="BoxContainer/ButtonSystem"]

[node name="leftSprite" type="Sprite2D" parent="BoxContainer/ButtonSystem/activeSprite"]
texture_filter = 5
texture_repeat = 1
position = Vector2(16, 16)
texture = ExtResource("5_3up5n")

[node name="middleSprite" type="Sprite2D" parent="BoxContainer/ButtonSystem/activeSprite"]
texture_filter = 3
texture_repeat = 1
position = Vector2(48, 16)
texture = ExtResource("6_uy53y")

[node name="rightSprite" type="Sprite2D" parent="BoxContainer/ButtonSystem/activeSprite"]
texture_filter = 5
texture_repeat = 1
position = Vector2(80, 16)
texture = ExtResource("7_dxfc2")

[node name="normalSprite" type="Node2D" parent="BoxContainer/ButtonSystem"]

[node name="leftSprite" type="Sprite2D" parent="BoxContainer/ButtonSystem/normalSprite"]
texture_filter = 5
texture_repeat = 1
position = Vector2(16, 16)
texture = ExtResource("2_gyk42")

[node name="middleSprite" type="Sprite2D" parent="BoxContainer/ButtonSystem/normalSprite"]
texture_filter = 3
texture_repeat = 1
position = Vector2(48, 16)
texture = ExtResource("3_6p4wc")

[node name="rightSprite" type="Sprite2D" parent="BoxContainer/ButtonSystem/normalSprite"]
texture_filter = 5
texture_repeat = 1
position = Vector2(80, 16)
texture = ExtResource("4_qqd3g")

[node name="button" type="Button" parent="BoxContainer/ButtonSystem"]
layout_mode = 1
offset_right = 96.0
offset_bottom = 32.0
focus_mode = 0
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(0.76662, 0.76662, 0.76662, 1)
theme_override_fonts/font = ExtResource("2_1p5kl")
text = "Resume"
flat = true

[connection signal="button_down" from="BoxContainer/ButtonSystem/button" to="BoxContainer/ButtonSystem" method="_on_button_button_down"]
[connection signal="button_up" from="BoxContainer/ButtonSystem/button" to="BoxContainer/ButtonSystem" method="_on_button_button_up"]
[connection signal="pressed" from="BoxContainer/ButtonSystem/button" to="BoxContainer/ButtonSystem" method="_on_button_pressed"]
